# sky-motors-ma

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  railway.toml
Workflow - n8n/: sky_motors_bot_v3.json  sky_motors_bot_v3.json:Zone.Identifier
data/: Active Inventory.csv  queries.sql
src/: main.py
src/api/: models.py  routes.py
src/core/: config.py  inventory.py  language.py  llm.py  sdr.py  state.py  transcriber.py  waha_client.py
src/database/: connection.py  leads.py
tests/: test_sdr.py
